--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/metro-runtime": "~3.1.3",
     "@expo/vector-icons": "^14.0.0",
+    "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/native": "^6.1.17",
@@ -23,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-cookies": "^3.3.0",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
