--- a/package.json
+++ b/package.json
@@ -3,34 +3,40 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "npx expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
-    "@expo/metro-runtime": "~3.1.3",
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/metro-runtime": "~5.0.4",
+    "@expo/vector-icons": "^14.1.0",
     "@notifee/react-native": "^7.8.2",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-picker/picker": "2.6.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~50.0.14",
-    "expo-font": "~11.10.3",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "expo": "^53.0.9",
+    "expo-font": "~13.3.1",
+    "expo-status-bar": "~2.2.3",
+    "metro-cache": "^0.82.3",
+    "metro-config": "^0.82.3",
+    "metro-resolver": "^0.82.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-cookies": "^3.3.0",
     "react-native-dropdown-select-list": "^2.0.5",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro": "^0.82.3",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-svg-transformer": "^1.5.1"
   },
   "private": true
 }
