--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BASE_URL=http://192.168.0.102:5050/
+# BASE_URL=http://192.168.0.102:5050/
+BASE_URL=https://taskmate-app-backend-production.up.railway.app/
