--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@expo/vector-icons": "^14.1.0",
     "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "^8.4.2",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "^53.0.9",
+    "expo": "53.0.12",
     "expo-font": "~13.3.1",
     "expo-status-bar": "~2.2.3",
     "metro-cache": "^0.82.3",
@@ -26,11 +26,10 @@
     "metro-resolver": "^0.82.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
-    "react-native-cookies": "^3.3.0",
+    "react-native": "0.79.4",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "4.11.1",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
@@ -39,5 +38,12 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-svg-transformer": "^1.5.1"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
